fixed the color on mobile

--- a/CSS/application.css
+++ b/CSS/application.css
@@ -388,7 +388,6 @@ body h1 {
     	visibility: hidden;
     }
     .form-outer {
-	background-color: #81955D;
 	width: 100%
 	}
 
